--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -7,3 +7,4 @@ analyzer:
     prefer_const_constructors: ignore
     prefer_const_constructors_in_immutables: ignore
     prefer_const_literals_to_create_immutables: ignore
+    use_build_context_synchronously: ignore
