--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -4,6 +4,7 @@ analyzer:
     avoid_init_to_null: ignore
     no_logic_in_create_state: ignore
     non_constant_identifier_names: ignore
+    prefer_collection_literals: ignore
     prefer_const_constructors: ignore
     prefer_const_constructors_in_immutables: ignore
     prefer_const_literals_to_create_immutables: ignore
