Implemented take calendar ui

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -2,6 +2,7 @@ include: package:flutter_lints/flutter.yaml
 analyzer:
   errors:
     avoid_init_to_null: ignore
+    must_be_immutable: ignore
     no_logic_in_create_state: ignore
     non_constant_identifier_names: ignore
     prefer_collection_literals: ignore
