--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   sqflite: ^2.3.3+1
   path: ^1.9.0
   fluttertoast: ^8.2.8
+  table_calendar: ^3.1.2
 
 dev_dependencies:
   flutter_test:
