--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -24,4 +24,4 @@ jobs:
         run: flutter pub get
 
       - name: Run unit tests
-        run: flutter test lib/test/*
+        run: flutter test lib/test/ci/*
