--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -6,12 +6,13 @@ plugins {
 
 android {
     namespace = "com.pavelkrylov.medicine_chest"
-    compileSdk = flutter.compileSdkVersion
+    compileSdk = 34
     ndkVersion = flutter.ndkVersion
 
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_1_8
         targetCompatibility = JavaVersion.VERSION_1_8
+        coreLibraryDesugaringEnabled true
     }
 
     kotlinOptions {
@@ -35,4 +36,10 @@ android {
 
 flutter {
     source = "../.."
+}
+
+dependencies {
+  coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.2.2'
+  implementation 'androidx.window:window:1.0.0'
+  implementation 'androidx.window:window-java:1.0.0'
 }
