--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   uuid: ^4.5.0
   mobile_scanner: ^5.2.3
   flutter_local_notifications: ^17.2.2
+  flutter_timezone: ^3.0.1
+  shared_preferences: ^2.3.2
 
 dev_dependencies:
   flutter_test:
